// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`VideoList should render self with error 1`] = `
<div
  className="videoList"
>
  <ErrorState
    color="black"
    message="Error requesting videos."
    retry={[Function]}
  />
</div>
`;

exports[`VideoList should render self with loader 1`] = `
<div
  className="videoList"
>
  <Loader />
</div>
`;

exports[`VideoList should render self with no videos 1`] = `
<div
  className="videoList"
>
  <BlankState
    color="black"
    message="No videos found."
  />
</div>
`;

exports[`VideoList should render self with videos 1`] = `
<div
  className="videoList"
>
  <InfiniteScroll
    isFetching={false}
    loadMore={[Function]}
    maxHeight=""
    pageToken="token"
  >
    <ul
      className="videos"
    >
      <Video
        description="description"
        handleClick={[Function]}
        isSearchResult={false}
        key="1"
        publishedAt="publishedAt"
        thumbnail="thumbnail.jpg"
        title="title"
        viewCount="1"
      />
      <Video
        description="description"
        handleClick={[Function]}
        isSearchResult={false}
        key="2"
        publishedAt="publishedAt"
        thumbnail="thumbnail.jpg"
        title="title"
        viewCount="1"
      />
    </ul>
  </InfiniteScroll>
</div>
`;

exports[`VideoList should render self with videos 2`] = `
<div
  className="videoList"
>
  <InfiniteScroll
    isFetching={true}
    loadMore={[Function]}
    maxHeight=""
    pageToken="token"
  >
    <ul
      className="videos"
    >
      <Video
        description="description"
        handleClick={[Function]}
        isSearchResult={false}
        key="1"
        publishedAt="publishedAt"
        thumbnail="thumbnail.jpg"
        title="title"
        viewCount="1"
      />
      <Video
        description="description"
        handleClick={[Function]}
        isSearchResult={false}
        key="2"
        publishedAt="publishedAt"
        thumbnail="thumbnail.jpg"
        title="title"
        viewCount="1"
      />
    </ul>
  </InfiniteScroll>
</div>
`;
